Secondary PR should not try to create another PR
Secondary PR should not try to create another PR

--- a/.github/workflows/Version.yml
+++ b/.github/workflows/Version.yml
@@ -79,7 +79,12 @@ jobs:
       env:
         NEW_TAG: ${{ steps.bump-tag.outputs.new_tag }}
         GH_TOKEN: ${{ secrets.PAT_TOKEN }}
+        PR_TITLE: ${{ github.event.pull_request.title }}
       run: |
+        if [[ ! "$PR_TITLE" =~ ^(Auto) ]]; then
+          echo "Automatic PRs should not run updates"
+          exit 0
+        fi
         BRANCH_NAME="gh-actions-$(uuidgen)"
         echo "BRANCH_NAME=$BRANCH_NAME" >> $GITHUB_ENV
         TAG_WITHOUT_V="${NEW_TAG:1}"
@@ -98,7 +103,12 @@ jobs:
       id: create-pr
       env:
         GH_TOKEN: ${{ secrets.PAT_TOKEN }}
+        PR_TITLE: ${{ github.event.pull_request.title }}
       run: |
+        if [[ ! "$PR_TITLE" =~ ^(Auto) ]]; then
+          echo "Automatic PRs should not create a PR"
+          exit 0
+        fi
         gh pr create --title "Auto Version Bump to ${NEW_TAG}" \
                      --body "Automated version update triggered by GitHub Actions" \
                      --base master --head ${{ env.BRANCH_NAME }}
@@ -108,7 +118,12 @@ jobs:
     - name: Merge the pull request
       env:
         GH_TOKEN: ${{ secrets.PAT_TOKEN }}
+        PR_TITLE: ${{ github.event.pull_request.title }}
       run: |
+        if [[ ! "$PR_TITLE" =~ ^(Auto) ]]; then
+          echo "Automatic PRs should not merge PRs"
+          exit 0
+        fi
         gh pr merge ${{ env.PR_NUMBER }} --merge --admin
 
     - name: Checkout for Tag
@@ -124,7 +139,12 @@ jobs:
     - name: Create or update tags
       env:
         GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
+        PR_TITLE: ${{ github.event.pull_request.title }}
       run: |
+        if [[ ! "$PR_TITLE" =~ ^(Auto) ]]; then
+          echo "Automatic PRs should not run updates"
+          exit 0
+        fi
         git tag -f "$vmajor"
         git push -f origin "$vmajor"
         git tag -f "$vminor"
@@ -138,7 +158,12 @@ jobs:
     - name: Create Release
       env:
         GH_TOKEN: ${{ secrets.PAT_TOKEN }}
+        PR_TITLE: ${{ github.event.pull_request.title }}
       run: |
+        if [[ ! "$PR_TITLE" =~ ^(Auto) ]]; then
+          echo "Automatic PRs should not create releases"
+          exit 0
+        fi
         gh release create "${{ steps.bump-tag.outputs.new_tag }}" \
           --repo="${{ github.repository }}" \
           --title="DStaf ${{ env.TAG_WITHOUT_V }}" \
