Allow empty commit
Allow empty commit

--- a/.github/workflows/Version.yml
+++ b/.github/workflows/Version.yml
@@ -92,7 +92,7 @@ jobs:
         sed -i "s/^version = .*/version = \"${TAG_WITHOUT_V}\"/" pyproject.toml
         sed -i "s/^__version__ = .*/__version__ = \"${TAG_WITHOUT_V}\"/" dstaf/__init__.py
         git add pyproject.toml dstaf/__init__.py
-        git commit -m "Bump Version to ${TAG_WITHOUT_V}"
+        git commit --allow-empty -m "Bump Version to ${TAG_WITHOUT_V}"
         git push origin $BRANCH_NAME
 
     - name: Create a pull request
