--- a/.github/workflows/Create Release.yml
+++ b/.github/workflows/Create Release.yml
@@ -91,7 +91,7 @@ jobs:
         PR_TITLE: ${{ github.event.pull_request.title }}
       run: |
         echo "PR TITLE: '${{ env.PR_TITLE }}'"
-        if [[ "${{ env.PR_TITLE }}" =~ ^Auth ]]; then
+        if [[ "${{ env.PR_TITLE }}" =~ ^Auto ]]; then
           echo Do not run automated PRs. Skip section.
           exit 0
         fi
