Try removing auto
This might result in CICD failing, so we'll see.

--- a/.github/workflows/Pull Request Checks.yml
+++ b/.github/workflows/Pull Request Checks.yml
@@ -22,7 +22,7 @@ jobs:
         env:
           PR_TITLE: ${{ github.event.pull_request.title }}
         run: |
-          if [[ ! "$PR_TITLE" =~ ^(Major|Minor|Patch|Doc|Auto) ]]; then
+          if [[ ! "$PR_TITLE" =~ ^(Major|Minor|Patch|Doc) ]]; then
             echo "Error: Pull request title must start with 'Major', 'Minor', 'Patch', or 'Doc'."
             echo "     - '$PR_TITLE'"
             exit 1
