--- a/.github/workflows/Pull Request Checks.yml
+++ b/.github/workflows/Pull Request Checks.yml
@@ -16,7 +16,7 @@ jobs:
   check-title:
     name: Check PR for Version Tag
     runs-on: ubuntu-latest
-    if: github.event_name != 'push'
+    if: github.event_name != 'push' && github.event.pull_request.merged == false
     steps:
       - name: Validate Pull Request Title
         env:
