--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,8 +34,8 @@ license-files = ["LICENSE"]
 Homepage = "https://github.com/dashasierra/dstaf"
 Issues = "https://github.com/dashasierra/dstaf/issues"
 
+[tool.poetry.group.test]
+optional = true
+
 [tool.poetry.group.test.dependencies]
 autopep8 = ">=2.3.2,<3"
-flake8 = ">=7.2.0,<8.0.0"
-isort = ">=6.0.1,<7"
-black = ">=25.1.0,<26"
