--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -42,7 +42,7 @@ jobs:
         Create_Branch
       env:
         NEW_TAG: ${{ steps.bump-tag.outputs.new_tag }}
-        GH_TOKEN: ${{ secrets.PAT_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
         HEAD_TITLE: ${{ github.event.pull_request.head.ref }}
         PR_TITLE: ${{ github.event.pull_request.title }}
       run: |
@@ -59,17 +59,13 @@ jobs:
         echo "BRANCH_NAME=$BRANCH_NAME" >> $GITHUB_ENV
         TAG_WITHOUT_V="${NEW_TAG:1}"
         echo "TAG_WITHOUT_V=$TAG_WITHOUT_V" >> $GITHUB_ENV
-        git config user.name "GitHub Actions"
-        git config user.email "actions@github.com"
+        git config user.name "dashasierra"
         git remote set-url origin https://x-access-token:${{ secrets.PAT_TOKEN }}@github.com/dashasierra/dstaf.git
         git checkout -b $BRANCH_NAME
         sed -i "s/^version = .*/version = \"${TAG_WITHOUT_V}\"/" pyproject.toml
         sed -i "s/^__version__ = .*/__version__ = \"${TAG_WITHOUT_V}\"/" dstaf/__init__.py
         git add pyproject.toml dstaf/__init__.py
-        # Hashed out to prevent infinite loop
         git commit --allow-empty -m "Bump Version to ${TAG_WITHOUT_V}"
-        # Below command should be removed once infinite loop is stopped
-        # git commit -m "Bump Version to ${TAG_WITHOUT_V}"
         git push origin $BRANCH_NAME
 
     - name: Create a pull request
