--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -59,6 +59,9 @@ jobs:
         echo "BRANCH_NAME=$BRANCH_NAME" >> $GITHUB_ENV
         TAG_WITHOUT_V="${NEW_TAG:1}"
         echo "TAG_WITHOUT_V=$TAG_WITHOUT_V" >> $GITHUB_ENV
+        git config user.email "33302393+dashasierra@users.noreply.github.com"
+        git config user.name "Dasha Sierra"
+        git config user.password "${{ env.GITHUB_TOKEN }}"
         git remote set-url origin https://x-access-token:${{ secrets.PAT_TOKEN }}@github.com/dashasierra/dstaf.git
         git checkout -b $BRANCH_NAME
         sed -i "s/^version = .*/version = \"${TAG_WITHOUT_V}\"/" pyproject.toml
