--- a/.github/workflows/Pull Request Checks.yml
+++ b/.github/workflows/Pull Request Checks.yml
@@ -10,22 +10,12 @@ on:
 
 jobs:
 
-  merge_requirements:
-    name: Merge Requirements
+  requirements:
+    name: Requirement Audit
     runs-on: ubuntu-latest
     if: github.event_name != 'push' && github.event.pull_request.merged == false
     steps:
-      - name: Token Generation Requirement
-        id: get_token
-        env:
-          DASHABOT_APPID: ${{ secrets.DASHABOT_APPID }}
-          DASHABOT_IID: ${{ secrets.DASHABOT_IID }}
-        run: |
-          echo "${{ secrets.DASHABOT_PK }}" > private-key.pem
-          pip install PyJWT cryptography requests
-          python3 .github/generate_jwt.py
-
-      - name: Version Semaphore Requirement
+      - name: Version Requirement
         env:
           PR_TITLE: ${{ github.event.pull_request.title }}
           BRANCH_NAME: ${{ github.event.pull_request.head.ref }}
@@ -63,7 +53,16 @@ jobs:
 
     - name: Install Requirements
       run: |
-        pip install --upgrade bandit pylint isort pytest
+        pip install --upgrade bandit pylint isort pytest PyJWT cryptography requests
+
+    - name: Token Requirement
+      id: get_token
+      env:
+        DASHABOT_APPID: ${{ secrets.DASHABOT_APPID }}
+        DASHABOT_IID: ${{ secrets.DASHABOT_IID }}
+      run: |
+        echo "${{ secrets.DASHABOT_PK }}" > private-key.pem
+        python3 .github/generate_jwt.py
 
     - name: Bandit Vulnerability Scan
       run: |
