Perform blank checking
The tokens might BOTH be blank, which would result in success. We don't want that, we need it to fail.

--- a/.github/workflows/Pull Request Checks.yml
+++ b/.github/workflows/Pull Request Checks.yml
@@ -69,12 +69,14 @@ jobs:
       run: |
         if [[ "{{ $env.GH_TOKEN }}" == "{{ $env.GITHUB_TOKEN }}" ]]; then
           echo "GH Token not set or incorrectly paired"
-          if [[ "{{ $env.GH_TOKEN }}" == "" ]]; then
-            echo "GH_TOKEN empty"
-          fi
-          if [[ "{{ $env.GITHUB_TOKEN }}" == "" ]]; then
-            echo "GITHUB_TOKEN empty"
-          fi
+          exit 1
+        fi
+        if [[ "{{ $env.GH_TOKEN }}" == "" ]]; then
+          echo "GH_TOKEN empty"
+          exit 1
+        fi
+        if [[ "{{ $env.GITHUB_TOKEN }}" == "" ]]; then
+          echo "GITHUB_TOKEN empty"
           exit 1
         fi
         echo "Tokens OK" 
