--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -84,8 +84,8 @@ jobs:
         echo "BRANCH_NAME=$BRANCH_NAME" >> $GITHUB_ENV
         TAG_WITHOUT_V="${NEW_TAG:1}"
         echo "TAG_WITHOUT_V=$TAG_WITHOUT_V" >> $GITHUB_ENV
-        git config user.email "dasha-bot@users.noreply.github.com"
-        git config user.name "Dasha-Bot"
+        git config user.email "dashabot@users.noreply.github.com"
+        git config user.name "Dasha[Bot]"
         git config user.password "${{ env.GITHUB_TOKEN }}"
         git remote set-url origin https://x-access-token:${{ env.GITHUB_TOKEN }}@github.com/${{ github.repository }}
         git checkout -b $BRANCH_NAME
