Add Dashabot to codeowners
Add Dashabot to codeowners

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,1 +1,6 @@
+# Default owner for all files
 * @dashasierra
+
+# Specific ownership for versioning-related files
+/pyproject.toml @dashasierra @dashabot
+/dstaf/__init__.py @dashasierra @dashabot
