--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -2,5 +2,5 @@
 * @dashasierra
 
 # Specific ownership for versioning-related files
-/pyproject.toml @dashasierra @dashabot
-/dstaf/__init__.py @dashasierra @dashabot
+/pyproject.toml @dashasierra @dashabot[bot]
+/dstaf/__init__.py @dashasierra @dashabot[bot]
