--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v4
 
-    - name: Generate installation token
+    - name: Generate JWT
       id: get_token
       env:
         DASHABOT_APPID: ${{ secrets.DASHABOT_APPID }}
@@ -34,9 +34,8 @@ jobs:
           echo Do not run automated PRs. Skip section.
           exit 0
         fi
-        echo "${{ secrets.DASHABOT_PK }}" > private-key.pem
         pip install PyJWT cryptography requests
-        python3 .github/generate_jwt.py
+        echo "${{ secrets.DASHABOT_PK }}" | python3 .github/generate_jwt.py
 
     - name: Check Token Availability
       run: |
@@ -93,7 +92,7 @@ jobs:
         TAG_WITHOUT_V="${NEW_TAG:1}"
         echo "TAG_WITHOUT_V=$TAG_WITHOUT_V" >> $GITHUB_ENV
         git config user.email "dashabot@users.noreply.github.com"
-        git config user.name "dasha-bot"
+        git config user.name "dashabot[bot]"
         git config user.password "${{ env.GITHUB_TOKEN }}"
         git remote set-url origin https://x-access-token:${{ env.GITHUB_TOKEN }}@github.com/${{ github.repository }}
         git checkout -b $BRANCH_NAME
